--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </section>
     <!-- cards section -->
     <section class="cardsSection">
-      <div class="cards">
+      <div id="cards" class="cards">
         <div class="eachCard">
           <div class="circle">
             <div class="icon">
