update HTML and JS

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="twoSides">
         <div class="sideLeftImage"></div>
 
-        <div class="sideRightContent">
+        <div id="ourServiceSection" class="sideRightContent">
           <div class="titlePosition">
             <p class="secondaryTitle">Our Service</p>
           </div>
